--- a/memory-game.css
+++ b/memory-game.css
@@ -8,11 +8,13 @@
 
 body {
   text-align: center;
+  background-image: url(./assets/brady-corps-ellyLSXQ5wg-unsplash.jpg);
 }
 
 
 header {
   text-align: center;
+  color: white;
 }
 
 main {
@@ -35,10 +37,20 @@ main {
 }
 
 
-#game div {
-  border: 1px solid black;
+.card {
+  border: 3px solid black;
   width: 100%;
   height: 100%;
   margin: 5px;
   display: inline-block;
+  opacity: 0.1;
+  background-color: grey;
 }
+
+/* #start-btn {
+
+}
+
+#reset-btn {
+
+} */
