--- a/memory-game.css
+++ b/memory-game.css
@@ -22,6 +22,17 @@ header {
   color: #F0FFFF;
   padding-top: 1rem;
   padding-bottom: 1rem;
+  font-size: 2rem;
+}
+
+div.score span {
+  color: #F0FFFF
+}
+
+#guess-count {
+  display: inline-block;
+  font-size: 2.5rem;
+  margin-left: 1.5rem;
 }
 
 main {
@@ -66,12 +77,12 @@ button:hover:enabled {
 
 
 .card {
-  border: 3px solid black;
+  border: 3px solid #226987;
   width: 100%;
   height: 100%;
   margin: 5px;
   display: inline-block;
-  opacity: 0.1;
+  opacity: 0.25;
   background-color: grey;
 }
 
