--- a/memory-game.css
+++ b/memory-game.css
@@ -65,7 +65,6 @@ button {
   color: #226987;
   padding: 0.5rem;
   border-radius: 0.5rem;
-  cursor: pointer;
   transition: all 300ms;
 }
 
@@ -75,7 +74,8 @@ button:disabled {
 
 button:hover:enabled {
   background-color: #3F97BD;
-  color: #F0FFFF
+  color: #F0FFFF;
+  cursor: pointer;
 }
 
 
@@ -102,6 +102,7 @@ button:hover:enabled {
   display: inline-block;
   opacity: 0.25;
   background-color: grey;
+  transition: background-color 200ms;
 }
 
 .buttons {
