--- a/memory-game.css
+++ b/memory-game.css
@@ -59,7 +59,7 @@ main {
 
 button {
   font-family: inherit;
-  font-size: 1.5rem;
+  font-size: 2.5rem;
   border: none;
   background-color: #F0FFFF;
   color: #226987;
@@ -80,7 +80,7 @@ button:hover:enabled {
 
 
 #game {
-  height: 45rem;
+  height: 40rem;
   width: 45rem;
   display: flex;
   align-items: center;
@@ -117,13 +117,16 @@ button:hover:enabled {
 
 
 @media only screen and (max-width: 725px) {
-header {
-  font-size: 1.5rem;
-}
-
+  header {
+    font-size: 1.5rem;
+  }
 
   #game {
-    width: 30rem;
+    width: 35rem;
     height: 30rem;
+  }
+
+  button {
+    font-size: 1.5rem;
   }
 }
