--- a/memory-game.css
+++ b/memory-game.css
@@ -115,6 +115,17 @@ button:hover:enabled {
   padding-bottom: 1rem;
 }
 
+.card-dropdown {
+  font-family: inherit;
+  font-size: 2.3rem;
+  border: none;
+  background-color: #F0FFFF;
+  color: #226987;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+}
+
 .swal-overlay {
   background-color: rgba(131, 185, 221, 0.7);
 }
@@ -144,6 +155,10 @@ button:hover:enabled {
 
   button {
     font-size: 1.5rem;
+  }
+
+  .card-dropdown {
+    font-size: 1.4rem;
   }
 }
 
