--- a/memory-game.css
+++ b/memory-game.css
@@ -143,23 +143,28 @@ button:hover:enabled {
   background-color: rgba(131, 185, 221, 0.7);
 }
 
+.score-container {
+  display: flex;
+  width: 60%;
+}
+
 .scoreboard {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
   color: #F0FFFF;
-  height: 12rem;
+  height: 8rem;
   width: 40rem;
   padding-top: 1rem;
 }
 
 .scoreboard p {
-  font-size: 3rem;
+  font-size: 2rem;
 }
 
 
 
-@media only screen and (max-width: 725px) {
+@media only screen and (max-width: 1040px) {
   header {
     font-size: 1.5rem;
   }
@@ -178,7 +183,7 @@ button:hover:enabled {
   }
 
   .scoreboard p {
-    font-size: 2rem;
+    font-size: 1.75rem;
   }
 }
 
@@ -186,6 +191,7 @@ footer {
   width: 100%;
   text-align: center;
   padding: 1rem;
+  margin-top: 1rem;
   background-color: #226987;
 }
 
